# playground

./: .gitignore  LICENSE  README.md  pyproject.toml
playground/: inocam.py  videoconf.py
playground/agent/: flush_message.py  rec_sample.py
playground/argparse/: list_input.py
playground/cv/: multicam.py
playground/disagree/: figs.R  sim.py
playground/disagree/config/: full_model.yaml  same_initpreds.yaml  same_lr.yaml
playground/distRL/: distRL.jl
playground/tuRLing/: ql.jl
playground/turexas/: biexp.jl
playground/turing-ql/: SLIDE.md  ql.jl
